Bug 750894 - Fix StoreSlotT write barriers with unknown type information. r=dvander