js/src/ion/shared/CodeGenerator-shared.cpp
@@ -462,15 +462,12 @@ CodeGeneratorShared::visitOutOfLineTruncateSlow(OutOfLineTruncateSlow *ool)
 void
 CodeGeneratorShared::emitPreBarrier(Register base, const LAllocation *index, MIRType type)
 {
-    JSValueType jstype = (type == MIRType_Value)
-                         ? JSVAL_TYPE_UNKNOWN
-                         : ValueTypeFromMIRType(type);
     if (index->isConstant()) {
         Address address(base, ToInt32(index) * sizeof(Value));
-        masm.emitPreBarrier(address, jstype);
+        masm.emitPreBarrier(address, type);
     } else {
         BaseIndex address(base, ToRegister(index), TimesEight);
-        masm.emitPreBarrier(address, jstype);
+        masm.emitPreBarrier(address, type);
     }
 }
 
