js/src/ion/x86/CodeGenerator-x86.cpp
@@ -232,7 +232,7 @@ CodeGeneratorX86::visitStoreSlotT(LStoreSlotT *store)
     MIRType valueType = store->mir()->value()->type();
 
     if (store->mir()->needsBarrier())
-        masm.emitPreBarrier(Address(base, offset), ValueTypeFromMIRType(store->mir()->slotType()));
+        masm.emitPreBarrier(Address(base, offset), store->mir()->slotType());
 
     if (valueType == MIRType_Double) {
         masm.movsd(ToFloatRegister(value), Operand(base, offset));
